--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,16 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+
+
     <div class="wrapper">
+      <div class="nav">
+        <% if logged_in? %>
+          <a href="/">All Reviews</a>
+          <a href="/">Create a new Review</a>
+          <a href="/logout">Log out</a>
+        <% end %>
+      </div>
 
         <%= yield %>
 
