added show page for reviews

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
 
       <div class="nav">
         <% if logged_in? %>
-          <a href="/reviews/index">All Reviews</a>
+          <a href="/reviews">All Reviews</a>
           <a href="/">Create a new Review</a>
           <a href="/logout">Log out</a>
         <% end %>
