--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,7 @@
       <div class="nav">
         <% if logged_in? %>
           <a href="/reviews">All Reviews</a>
-          <a href="/">Create a new Review</a>
+          <a href="/reviews/new">Create a new Review</a>
           <a href="/logout">Log out</a>
         <% end %>
       </div>
