added a list of user's review's to their show page

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -5,6 +5,6 @@
 <h3>Reviews:</h3>
 <ul>
   <% @user.reviews.each do |rev| %>
-    <li><%= rev.game_title %></li>
+    <li><%= rev.game_title %></a></li>
   <% end %>
 </ul>
