--- a/app/views/reviews/show.erb
+++ b/app/views/reviews/show.erb
@@ -1,4 +1,7 @@
 <h1><%= @review.game_title %></h1>
-<p><%= @review.description %></p>
+<h2>Score: <%= @review.score %></h2>
+<p>Description: <%= @review.description %></p>
 <br>
 <h5>By: <%= @review.user.name %></h5>
+
+<a href="/reviews/<%= @review.id %>/edit">Edit Review</a>
