--- a/app/views/reviews/show.erb
+++ b/app/views/reviews/show.erb
@@ -5,3 +5,9 @@
 <h5>By: <%= @review.user.name %></h5>
 
 <a href="/reviews/<%= @review.id %>/edit">Edit Review</a>
+
+
+<form class="" action="/reviews/<%= @review.id %>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" name="" value="Delete Review">
+</form>
