--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,3 +1,7 @@
+<% if flash[:error] %>
+  <h3><%= flash[:error] %></h3>
+<% end %>
+
 <h1>Please Log In:</h1>
 <form class="" action="/login" method="post">
   <label for="email">Email:</label>
