--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,6 +26,14 @@
         <% end %>
       </div>
 
+      <% if flash[:error] %>
+        <h3><%= flash[:error] %></h3>
+      <% end %>
+
+      <% if flash[:message] %>
+        <h3><%= flash[:message] %></h3>
+      <% end %>
+
         <%= yield %>
 
       <footer class="branding">
