--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,11 +27,11 @@
       </div>
 
       <% if flash[:error] %>
-        <h3><%= flash[:error] %></h3>
+        <h3 style="color:red;"><%= flash[:error] %></h3>
       <% end %>
 
       <% if flash[:message] %>
-        <h3><%= flash[:message] %></h3>
+        <h3 style="color:green;"><%= flash[:message] %></h3>
       <% end %>
 
         <%= yield %>
