--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,14 +13,17 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: rgba(0, 0, 0, 0.81);
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
   }
 
+
   .wrapper {
     background: #fff;
+    border-style: solid;
+    border-color: #9C0606;
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
