--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,6 +22,7 @@
         <% if logged_in? %>
           <a href="/reviews">All Reviews</a>
           <a href="/reviews/new">Create a new Review</a>
+          <a href="/users/<%= current_user.id %>">Your Profile</a>
           <a href="/logout">Log out</a>
         <% end %>
       </div>
