--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <h1>Welcome to Red Line Reviews!</h1>
+  <h1 style="text-decoration:underline; text-decoration-color:#9C0606">Welcome to Red Line Reviews!</h1>
+  <br>
 
   <a href="/login">Log In</a> or <a href="/signup">Sign Up</a>
 
